--- a/index.html
+++ b/index.html
@@ -18,6 +18,56 @@
           <a href="./index.html" class="logo"
             ><span class="logo-web">Web</span>Studio</a
           >
+          <button
+            type="button"
+            class="menu-button"
+            aria-expanded="false"
+            data-menu-button
+            aria-controls="menu-container"
+          >
+            <svg
+              width="40"
+              height="40"
+              aria-label="Переключатель мобильного меню"
+            >
+              <use
+                class="icon-menu"
+                href="./images/icons/symbol-defs.svg#icon-menu"
+              ></use>
+              <use
+                class="icon-cross"
+                href="./images/icons/symbol-defs.svg#icon-menu-close"
+              ></use>
+            </svg>
+          </button>
+
+          <div class="menu-container" data-menu id="menu-container">
+            <ul class="list">
+              <li class="nav-item">
+                <a href="./index.html" class="link current">Студия</a>
+              </li>
+              <li class="nav-item">
+                <a href="./portfolio.html" class="link">Портфолио</a>
+              </li>
+              <li class="nav-item"><a href="#" class="link">Контакты</a></li>
+            </ul>
+            <div class="contacts">
+              <a href="mailto:info@devstudio.com" class="link link-info">
+                <svg class="header-icons" width="16" height="12">
+                  <use href="./images/icons/symbol-defs.svg#icon-mail"></use>
+                </svg>
+                info@devstudio.com
+              </a>
+              <a href="tel:+380961111111" class="link link-info">
+                <svg class="header-icons" width="10" height="15">
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-smartphone"
+                  ></use>
+                </svg>
+                +38 096 111 11 11
+              </a>
+            </div>
+          </div>
           <ul class="list">
             <li class="nav-item">
               <a href="./index.html" class="link current">Студия</a>
@@ -96,33 +146,74 @@
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="list">
             <li class="activity-item">
-              <img
-                src="./images/activity/desktop.jpg"
-                width="370"
-                height="294"
-                alt=""
-                class="activity-image"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/activity/desktop-370.webp 1x,
+                    ./images/activity/desktop-740.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <img
+                  srcset="
+                    ./images/activity/desktop-370.jpg 1x,
+                    ./images/activity/desktop-740.jpg 2x
+                  "
+                  src="./images/activity/desktop-370.jpg"
+                  width="370"
+                  height="294"
+                  alt=""
+                  class="activity-image"
+                />
+              </picture>
+
               <h3 class="activity-title">Десктопные приложения</h3>
             </li>
             <li class="activity-item">
-              <img
-                src="./images/activity/mobile.jpg"
-                width="370"
-                height="294"
-                alt=""
-                class="activity-image"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/activity/mobile-370.webp 1x,
+                    ./images/activity/mobile-740.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <img
+                  srcset="
+                    ./images/activity/mobile-370.jpg 1x,
+                    ./images/activity/mobile-740.jpg 2x
+                  "
+                  src="./images/activity/mobile-370.jpg"
+                  width="370"
+                  height="294"
+                  alt=""
+                  class="activity-image"
+                />
+              </picture>
+
               <h3 class="activity-title">Мобильные приложения</h3>
             </li>
             <li class="activity-item">
-              <img
-                src="./images/activity/design.jpg"
-                width="370"
-                height="294"
-                alt=""
-                class="activity-image"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/activity/design-370.webp 1x,
+                    ./images/activity/design-740.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <img
+                  srcset="
+                    ./images/activity/design-370.jpg 1x,
+                    ./images/activity/design-740.jpg 2x
+                  "
+                  src="./images/activity/design-370.jpg"
+                  width="370"
+                  height="294"
+                  alt=""
+                  class="activity-image"
+                />
+              </picture>
               <h3 class="activity-title last-activity">Дизайнерские решения</h3>
             </li>
           </ul>
@@ -134,13 +225,26 @@
           <h2 class="section-title">Наша команда</h2>
           <ul class="list">
             <li class="team-item">
-              <img
-                src="./images/team/Igor.jpg"
-                width="270"
-                height="260"
-                alt=""
-                class="team-image"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/Igor-450.webp 1x,
+                    ./images/team/Igor-900.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <img
+                  srcset="
+                    ./images/team/Igor-450.jpg 1x,
+                    ./images/team/Igor-900.jpg 2x
+                  "
+                  src="./images/team/Igor-450.jpg"
+                  width="270"
+                  height="260"
+                  alt=""
+                  class="team-image"
+                />
+              </picture>
               <h3 class="team-title">Игорь Демьяненко</h3>
               <p class="team-text">Product Designer</p>
               <ul class="social-list">
@@ -183,13 +287,24 @@
               </ul>
             </li>
             <li class="team-item">
-              <img
-                src="./images/team/Olya.jpg"
-                width="270"
-                height="260"
-                alt=""
-                class="team-image"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/Olya-450.webp 1x,
+                    ./images/team/Olya-900.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <img
+                  srcset="
+                    ./images/team/Olya-450.jpg 1x,
+                    ./images/team/Olya-900.jpg 2x
+                  "
+                  src="./images/team/Olya-450.jpg"
+                  alt=""
+                  class="team-image"
+                />
+              </picture>
               <h3 class="team-title">Ольга Репина</h3>
               <p class="team-text">Frontend Developer</p>
               <ul class="social-list">
@@ -232,13 +347,27 @@
               </ul>
             </li>
             <li class="team-item">
-              <img
-                src="./images/team/Kolya.jpg"
-                width="270"
-                height="260"
-                alt=""
-                class="team-image"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/Kolya-450.webp 1x,
+                    ./images/team/Kolya-900.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <img
+                  srcset="
+                    ./images/team/Kolya-450.jpg 1x,
+                    ./images/team/Kolya-900.jpg 2x
+                  "
+                  src="./images/team/Kolya-450.jpg"
+                  width="270"
+                  height="260"
+                  alt=""
+                  class="team-image"
+                />
+              </picture>
+
               <h3 class="team-title">Николай Тарасов</h3>
               <p class="team-text">Marketing</p>
               <ul class="social-list">
@@ -281,13 +410,26 @@
               </ul>
             </li>
             <li class="team-item">
-              <img
-                src="./images/team/Misha.jpg"
-                width="270"
-                height="260"
-                alt=""
-                class="team-image"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/Misha-450.webp 1x,
+                    ./images/team/Misha-900.webp 2x
+                  "
+                  type="image/webp"
+                />
+                <img
+                  srcset="
+                    ./images/team/Misha-450.jpg 1x,
+                    ./images/team/Misha-900.jpg 2x
+                  "
+                  src="./images/team/Misha-450.jpg"
+                  width="270"
+                  height="260"
+                  alt=""
+                  class="team-image"
+                />
+              </picture>
               <h3 class="team-title">Михаил Ермаков</h3>
               <p class="team-text">UI Designer</p>
               <ul class="social-list">
@@ -551,5 +693,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
