--- a/portfolio.html
+++ b/portfolio.html
@@ -17,6 +17,49 @@
           <a href="./index.html" class="logo"
             ><span class="logo-web">Web</span>Studio</a
           >
+          <button type="button" class="menu-button" data-menu-button>
+            <svg
+              width="40"
+              height="40"
+              aria-label="Переключатель мобильного меню"
+            >
+              <use
+                class="icon-menu"
+                href="./images/icons/symbol-defs.svg#icon-menu"
+              ></use>
+              <use
+                class="icon-cross"
+                href="./images/icons/symbol-defs.svg#icon-menu-close"
+              ></use>
+            </svg>
+          </button>
+          <div class="menu-container" data-menu>
+            <ul class="list">
+              <li class="nav-item">
+                <a href="./index.html" class="link">Студия</a>
+              </li>
+              <li class="nav-item">
+                <a href="./portfolio.html" class="link current">Портфолио</a>
+              </li>
+              <li class="nav-item"><a href="#" class="link">Контакты</a></li>
+            </ul>
+            <div class="contacts">
+              <a href="mailto:info@devstudio.com" class="link link-info">
+                <svg class="header-icons" width="16" height="12">
+                  <use href="./images/icons/symbol-defs.svg#icon-mail"></use>
+                </svg>
+                info@devstudio.com
+              </a>
+              <a href="tel:+380961111111" class="link link-info">
+                <svg class="header-icons" width="10" height="15">
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-smartphone"
+                  ></use>
+                </svg>
+                +38 096 111 11 11
+              </a>
+            </div>
+          </div>
           <ul class="list">
             <li class="nav-item">
               <a href="./index.html" class="link">Студия</a>
@@ -69,12 +112,25 @@
             <li class="portfolio-item">
               <a href="#" class="portfolio-link">
                 <div class="image-box">
-                  <img
-                    src="./images/portfolio/techno-opt.jpg"
-                    alt=""
-                    width="370"
-                    class="portfolio-image"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/techno-370.webp 1x,
+                        ./images/portfolio/techno-740.webp 2x
+                      "
+                      type="image/webp"
+                    />
+                    <img
+                      srcset="
+                        ./images/portfolio/techno-370.jpg 1x,
+                        ./images/portfolio/techno-740.jpg 2x
+                      "
+                      src="./images/portfolio/techno-370.jpg"
+                      alt=""
+                      width="370"
+                      class="portfolio-image"
+                    />
+                  </picture>
                   <p class="portfolio-description">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -88,12 +144,25 @@
             <li class="portfolio-item">
               <a href="#" class="portfolio-link">
                 <div class="image-box">
-                  <img
-                    src="./images/portfolio/new-orlean-opt.jpg"
-                    alt=""
-                    width="370"
-                    class="portfolio-image"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/new-orlean-370.webp 1x,
+                        ./images/portfolio/new-orlean-740.webp 2x
+                      "
+                      type="image/webp"
+                    />
+                    <img
+                      srcset="
+                        ./images/portfolio/new-orlean-370.jpg 1x,
+                        ./images/portfolio/new-orlean-740.jpg 2x
+                      "
+                      src="./images/portfolio/new-orlean-370.jpg"
+                      alt=""
+                      width="370"
+                      class="portfolio-image"
+                    />
+                  </picture>
                   <p class="portfolio-description">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -109,12 +178,25 @@
             <li class="portfolio-item">
               <a href="#" class="portfolio-link">
                 <div class="image-box">
-                  <img
-                    src="./images/portfolio/seafood-opt.jpg"
-                    alt=""
-                    width="370"
-                    class="portfolio-image"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/seafood-370.webp 1x,
+                        ./images/portfolio/seafood-740.webp 2x
+                      "
+                      type="image/webp"
+                    />
+                    <img
+                      srcset="
+                        ./images/portfolio/seafood-370.jpg 1x,
+                        ./images/portfolio/seafood-740.jpg 2x
+                      "
+                      src="./images/portfolio/seafood-370.jpg"
+                      alt=""
+                      width="370"
+                      class="portfolio-image"
+                    />
+                  </picture>
                   <p class="portfolio-description">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -356,5 +438,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
