--- a/portfolio.html
+++ b/portfolio.html
@@ -210,12 +210,26 @@
             <li class="portfolio-item">
               <a href="#" class="portfolio-link">
                 <div class="image-box">
-                  <img
-                    src="./images/portfolio/prime-opt.jpg"
-                    alt=""
-                    width="370"
-                    class="portfolio-image"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/prime-370.webp 1x,
+                        ./images/portfolio/prime-740.webp 2x
+                      "
+                      type="image/webp"
+                    />
+                    <img
+                      srcset="
+                        ./images/portfolio/prime-370.jpg 1x,
+                        ./images/portfolio/prime-740.jpg 2x
+                      "
+                      src="./images/portfolio/prime-370.jpg"
+                      alt=""
+                      width="370"
+                      class="portfolio-image"
+                    />
+                  </picture>
+
                   <p class="portfolio-description">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -229,12 +243,25 @@
             <li class="portfolio-item">
               <a href="#" class="portfolio-link">
                 <div class="image-box">
-                  <img
-                    src="./images/portfolio/boxes-opt.jpg"
-                    alt=""
-                    width="370"
-                    class="portfolio-image"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/boxes-370.webp 1x,
+                        ./images/portfolio/boxes-740.webp 2x
+                      "
+                      type="image/webp"
+                    />
+                    <img
+                      srcset="
+                        ./images/portfolio/boxes-370.jpg 1x,
+                        ./images/portfolio/boxes-740.jpg 2x
+                      "
+                      src="./images/portfolio/boxes-370.jpg"
+                      alt=""
+                      width="370"
+                      class="portfolio-image"
+                    />
+                  </picture>
                   <p class="portfolio-description">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -248,12 +275,25 @@
             <li class="portfolio-item">
               <a href="#" class="portfolio-link">
                 <div class="image-box">
-                  <img
-                    src="./images/portfolio/noBorders-opt.jpg"
-                    alt=""
-                    width="370"
-                    class="portfolio-image"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/noBorders-370.webp 1x,
+                        ./images/portfolio/noBorders-740.webp 2x
+                      "
+                      type="image/webp"
+                    />
+                    <img
+                      srcset="
+                        ./images/portfolio/noBorders-370.jpg 1x,
+                        ./images/portfolio/noBorders-740.jpg 2x
+                      "
+                      src="./images/portfolio/noBorders-370.jpg"
+                      alt=""
+                      width="370"
+                      class="portfolio-image"
+                    />
+                  </picture>
                   <p class="portfolio-description">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -267,12 +307,25 @@
             <li class="portfolio-item">
               <a href="#" class="portfolio-link">
                 <div class="image-box">
-                  <img
-                    src="./images/portfolio/ledition-opt.jpg"
-                    alt=""
-                    width="370"
-                    class="portfolio-image"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/ledition-370.webp 1x,
+                        ./images/portfolio/ledition-740.webp 2x
+                      "
+                      type="image/webp"
+                    />
+                    <img
+                      srcset="
+                        ./images/portfolio/ledition-370.jpg 1x,
+                        ./images/portfolio/ledition-740.jpg 2x
+                      "
+                      src="./images/portfolio/ledition-370.jpg"
+                      alt=""
+                      width="370"
+                      class="portfolio-image"
+                    />
+                  </picture>
                   <p class="portfolio-description">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -286,12 +339,25 @@
             <li class="portfolio-item">
               <a href="#" class="portfolio-link">
                 <div class="image-box">
-                  <img
-                    src="./images/portfolio/lab-opt.jpg"
-                    alt=""
-                    width="370"
-                    class="portfolio-image"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/lab-370.webp 1x,
+                        ./images/portfolio/lab-740.webp 2x
+                      "
+                      type="image/webp"
+                    />
+                    <img
+                      srcset="
+                        ./images/portfolio/lab-370.jpg 1x,
+                        ./images/portfolio/lab-740.jpg 2x
+                      "
+                      src="./images/portfolio/lab-370.jpg"
+                      alt=""
+                      width="370"
+                      class="portfolio-image"
+                    />
+                  </picture>
                   <p class="portfolio-description">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -305,12 +371,25 @@
             <li class="portfolio-item">
               <a href="#" class="portfolio-link">
                 <div class="image-box">
-                  <img
-                    src="./images/portfolio/growing-opt.jpg"
-                    alt=""
-                    width="370"
-                    class="portfolio-image"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/portfolio/growing-370.webp 1x,
+                        ./images/portfolio/growing-740.webp 2x
+                      "
+                      type="image/webp"
+                    />
+                    <img
+                      srcset="
+                        ./images/portfolio/growing-370.jpg 1x,
+                        ./images/portfolio/growing-740.jpg 2x
+                      "
+                      src="./images/portfolio/growing-370.jpg"
+                      alt=""
+                      width="370"
+                      class="portfolio-image"
+                    />
+                  </picture>
                   <p class="portfolio-description">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
